src/webui/src/sass/_box-content.scss
.top-align { vertical-align: top; }
.table, .cb-table { display: table; }
.tabular-row { display: table-row; }
.cell { display: table-cell; }

.star { width: 1rem; height: 1rem; stroke-width: 3%; stroke: $black-75; }
.star.filled { fill: $black-75; }

.acmg-body { margin-top: 1.3rem; margin-bottom: 0.7rem;
  .suggested-class {transform: all 1.4s; padding-left: 0.3rem; padding-right: 0.1rem; }
}
$acmg-map: (
  ba: hsl(120,100,25),
  bs: hsl(100,80,40),
  bp: hsl(80,100,40),
  re: hsl(60,100,25),
  pv: hsl(0,100,30),
  ps: hsl(20,80,40),
  pm: hsl(30,100,40),
  pp: hsl(40,80,50),
);
$acmg-opacity: (
  ba: 0.35,
  bs: 0.25,
  bp: 0.15,
  re: 0.5,
  pv: 0.35,
  ps: 0.25,
  pm: 0.15,
  pp: 0.10,
);
section.acmg-wrapper { display: flex; flex-wrap: wrap; }
.acmg { margin-right: 0.7rem; margin-bottom: 0.7rem; display: flex; flex-direction: column; border-left: 0.3rem solid $black-25;
  section { min-height: 2.6rem; display: flex; align-items: center; padding: 0.7rem; padding-right: 0; }
  .upper-wrapper { display: flex; }
  &-upper { justify-content: space-between; white-space: nowrap; flex: 1; }
  button { background-color: Transparent; box-shadow: none; color: $white; height: 1.8rem; padding: 0 0.7rem;
    &:hover { background-color: Transparent; box-shadow: none; }
  }
  h4 { font-family: $slim; font-size: 1.4rem; font-weight: 600; letter-spacing: 0.05rem; }
  p { color: $black-75; font-weight: 600; }
  h4.acmg-title ~ .right-item { margin-left: 2.6rem; }
  .left-item { display: flex;
    h4 { padding-right: 0.7rem;}
    .adjust-button { font-size: 1.6rem; color:#333; cursor: pointer;}
  }
  .right-item { padding-right: 0.7rem; color:#333; }
  .commentbox { width: 100%; }
  &.clickable { border-bottom: none; &:hover { border-bottom: none; } }
  &.indented { margin-top: -2.6rem; }
  .included & { border-left: 0.6rem solid $black-25; width: 75rem; }
}
.acmg-req { cursor: pointer; }
.acmg-req.noclick { cursor: default; }
.acmg-req .acmg-upper { height: 100%; }
@each $name, $color in $acmg-map {
  .acmg.#{$name} { border-color: $color; }
  .acmg.#{$name}, aside.acmg-req.#{$name} {
    .acmg-upper { background-color: hsla(hue($color),saturation($color),lightness($color), map-get($acmg-opacity,$name)); }
    .acmg-title-wrapper { min-width: 7rem; display: flex; justify-content: center; }
    h4.acmg-title { color: darken($color,10); margin-right: 0.7rem; padding-right: 0; }
    h4.acmg-title.clickable { border-color: hsla(hue($color),saturation($color),lightness($color), 0.5); }
    .acmg-lower { background-color: hsla(hue($color),saturation($color),lightness($color),0.02); }
  }
}
.acmg.re h4.acmg-title { color: white; letter-spacing: 0; }
.acmg.re h4.acmg-title.clickable { border-color: $white-50; }
.acmg-selection .acmg { margin-right: 0; }

.report {
  h4.section-header { @extend .sb-notification; font-family: $slim; color: $blue-75; font-weight: 700; font-size: 1.25rem; padding-top: 1.5rem; padding-bottom: 0.4rem;}
  pre { white-space: pre-wrap; background-color: rgba(0, 0, 0, 0.04); padding-left: 1rem; }
  .included-report { font-family: "Source Code Pro", monospace; background-color: $purple-05; padding: 2rem;
     h5 { font-size: 1.2rem; }
     .content { font-family: inherit; font-size: 1.2rem; }
  }
  &-entry ~ &-entry { margin-top: 2.6rem; }
}

.vardb {
  .button-row {text-align: right;}
  .outdated { color: $red; text-transform: uppercase; }
}

div.existing-classification-comments .tabular-row:last-child .wysiwygeditor {
  border-bottom: none;
}

.analysis-list { display: flex; flex-direction: column;

  .list-item { display: flex; margin-bottom: 1.0rem; min-height: 3.0rem; font-size: 1.4rem;
    .analysis-date { color: $black-50; }
    .full-title { flex-grow: 1; padding-left: 1.2rem;
      .sample-type { font-size: 1.2rem; color: $black-50; border: 1px solid $black-25; padding: 0.2rem; margin-right: 0.3rem; }
    }
    .analysis-priority { color: $red-75; padding-left: 1.3rem; text-transform: uppercase; }
    .analysis-users { padding-right: 2.0rem; }
    .analysis-extras { font-size: 1.2rem; padding-right: 1rem;
      .analysis-comment { background-color: $green-25; padding: 0.3rem; }
    }
  }
}

.allele-list { display: flex; flex-direction: column;

  .list-item { display: flex; margin-bottom: 1.0rem; min-height: 3.0rem; font-size: 1.4rem;
    .analysis-date { color: $black-50; }
    .full-title { flex-grow: 1; padding-left: 1.2rem; }
    .allele-priority { color: $red-75; padding-left: 1.3rem; text-transform: uppercase; }
    .allele-users { padding-right: 2.0rem; }
    .allele-genepanel { padding-right: 2.0rem; }
    .allele-extras { padding-right: 1rem;
      .analysis-comment { background-color: $green-25; padding: 0.3rem; }
    }
  }
}


.attachment {
  margin-right: 1rem;
  padding: 0.3rem;
  padding-bottom: 0;
  border: outset;
  border-color: $black-05;
}

.attachmentcontrollers {
  padding-left: 0.6rem;
  padding-right: 0.6rem;
  height: 1.5rem;
  color: $black-75;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.attachmentid {
  font-size: 1.4rem;
  vertical-align: top;
  margin-top: -0.3rem;
}

.downloadattachment > a {
  border-bottom: none;
}

.removeattachment {
  margin-top: 0.1rem;
  cursor: pointer;
}

.attachment-wrapper {
  display: flex;
  flex-wrap: wrap;
  padding: 0.4rem;
}

.droparea-hidden {
  display: none;
}

.attachment * img, .attachment * .attachmentcontrollers, .attachment * .attachmentthumbnail {
  width: 9rem;
}

upload > label > div {
  display: flex;
}

.reference-eval-popover {
  max-width: 30vw;
}

